<resources>
    <string name="app_name">Services Menu</string>

    <string name="Services">Services List</string>

    <string name="menu_snpl1"><t>Hair Cut</t></string>
    <string name="menu_snpl2"><t>Color</t></string>
    <string name="menu_snpl3"><t>Hair Perm</t></string>
    <string name="menu_snpl4"><t>Shampoo Service</t></string>
    <string name="menu_snpl5"><t>Nail Treatment</t></string>
    <string name="menu_snpl6"><t>Package 1</t>\n<t>Hair Cut + Color</t></string>
    <string name="menu_snpl7"><t>Package 2</t>\n<t>Hair Cut + Shampoo Service</t></string>
    <string name="menu_snpl8"><t>Package 3</t>\n<t>Hair Cut + Hair Perm</t></string>
    <string name="menu_snpl9"><t>Package 4</t>\n<t>Color + Hair Perm</t></string>
    <string name="menu_snpl10"><t>Package 5</t>\n<t>Hair Cut + Shampoo Service + Hair Perm </t></string>
    <string name="menu_snpl11"><t>Package 6</t>\n<t>Hair Cut + Color + Hair Perm</t></string>
    <string name="menu_snpl12"><t>Package 7</t>\n<t>Color + Hair Perm + Nail Treatment </t></string>
    <string name="menu_snpl13"><t>Package 8</t>\n<t>Color + Hair Perm + Nail Treatment + Shampoo Service </t></string>
    <string name="menu_snpl14"><t>Package 9</t>\n<t>Hair Cut + Color + Hair Perm + Shampoo Service </t></string>

    <string name="booking">Booking Now</string>
    <string name="enter_comments">Enter yours comments \n (At most 20 words)</string>
    <string name="send_comment">SEND COMMENT</string>

    <string name="menu_snpl1_infor">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t<t>Price: RM55 - RM90</t>\n\n<p>For the Hair Cut we have 3 type category of Baber.The First category of Baber is Senior Stylist. Senior Stylist is priced at RM 55 for boys and RM 70 for girls.</p>\n\n<p>The Second category of Baber is Professional. Professional is priced at RM 60 for boys and RM 80 for girls. The Third category of Baber is Director. Director is priced at RM 70 for boys and RM 90 for girls. </p></string>
    <string name="menu_snpl2_infor">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t<t>Price: RM150 – RM220</t>\n\n<p>COLOR is a fixed price for men women need to see hair length. We have 3 different prices for girl of colours are short hair, medium hair and long hair. Short Hair is priced at RM 220, Medium Hair is priced at RM 250 and Long Hair is priced at RM 280.The price for a man is RM 150. </p></string>
    <string name="menu_snpl3_infor">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t<t>Price: RM180 – RM400</t>\n\n<p>Hair Perm.We have 2 type of Hair Perm, the first type is Cold Perm is for boys the price is RM 180. Another type is Digital Perm is for a girl the price is depends on the hair length, Short Hair is priced at RM 350, Medium Hair is priced at RM 380 and Long Hair is priced at RM 400. </p></string>
    <string name="menu_snpl4_infor">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t<t>Price: RM30 – RM60</t>\n\n<p>Providing shampoo service is not only to provide customers with a pleasant and relaxing experience, but also to clean the hair and scalp. The uniform rate for boys is RM30. For girls, RM40 for short hair and RM60 for long hair. </p></string>
    <string name="menu_snpl5_infor">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t<t>Price: RM70</t>\n\n<p>To strenghten your natural nails so that they can grow long and healthy, and to insure nail plate is tough to withstand any nail enhancements. </p></string>
    <string name="menu_snpl6_infor">\t\t\t\t\t<t>Price of Hair Cut: RM50 – RM85</t>\n\t\t\t\t\t<t>Price of Color: RM140 – RM260</t>\n\n<p>Hair Cut + Color is a Package 1. The price of this package 1 will be cheaper than the monomer. So Customer can enjoy two services at the discounted price. Hair Cut for Senior Stylist is RM 50 for boys and RM 65 for girls. Professional is RM 55 for boys and RM 75 for girls. Director is RM 65 for boys and RM 85 for girls. \n\n Color for Boys is RM 140, for girls is depends on the hair length: Short Hair is RM200, Medium Hair is RM 230 and Long Hair is RM 260. </p></string>
    <string name="menu_snpl7_infor">\t\t\t\t\t<t>Price of Hair Cut: RM50 – RM85</t>\n<t>Price of Shampoo Service: RM25 – RM55</t>\n\n<p>Hair Cut + Shampoo Service is a Package 2. The price of this package 2 will be cheaper than the monomer. So Customer can enjoy two services at the discounted price. Hair Cut for Senior Stylist is RM 50 for boys and RM 65 for girls. Professional is RM 55 for boys and RM 75 for girls. Director is RM 65 for boys and RM 85 for girls. \n\n Shampoo Service for Boys is RM25. For girls, RM35 for short hair and RM55 for long hair. </p></string>
    <string name="menu_snpl8_infor">\t\t\t\t\t<t>Price of Hair Cut: RM50 – RM85</t>\n\t\t\t\t\t<t>Price of Hair Perm: RM165 – RM380</t>\n\n<p>Hair Cut + Hair Perm is a Package 3. The price of this package 3 will be cheaper than the monomer. So Customer can enjoy two services at the discounted price. Hair Cut for Senior Stylist is RM 50 for boys and RM 65 for girls. Professional is RM 55 for boys and RM 75 for girls. Director is RM 65 for boys and RM 85 for girls. \n\n Cold Perm for boys is RM 165, for girls is Digital Perm and the price is depends on the hair length: Short Hair is RM 330, Medium Hair is RM360, Long Hair is RM 380. </p></string>
    <string name="menu_snpl9_infor">\t\t\t\t\t<t>Price of Color: RM140 – RM260</t>\n\t\t\t\t\t<t>Price of Hair Perm: RM165 – RM380</t>\n\n<p>Color + Hair Perm is a Package 4. The price of this package 4 will be cheaper than the monomer. So Customer can enjoy two services at the discounted price. Color for Boys is RM 140, for girls is depends on the hair length: Short Hair is RM200, Medium Hair is RM 230 and Long Hair is RM 260. \n\n Cold Perm for boys is RM 165, for girls is Digital Perm and the price is depends on the hair length: Short Hair is RM 330, Medium Hair is RM360, Long Hair is RM 380. </p></string>
    <string name="menu_snpl10_infor">\t\t\t\t\t<t>Price of Hair Cut: RM50 – RM85</t>\n<t>Price of Shampoo Service: RM25 – RM55</t>\n\t\t\t\t\t<t>Price of Hair Perm: RM165 – RM380</t>\n\n<p>Hair Cut + Shampoo Service + Hair Perm is a Package 5. The price of this package 5 will be cheaper than the monomer. So Customer can enjoy two services at the discounted price. </p>\n\n<p>Hair Cut for Senior Stylist is RM 50 for boys and RM 65 for girls. Professional is RM 55 for boys and RM 75 for girls. Director is RM 65 for boys and RM 85 for girls. \n\n Shampoo Service for Boys is RM25. For girls, RM35 for short hair and RM55 for long hair. \n\n Cold Perm for boys is RM 165, for girls is Digital Perm and the price is depends on the hair length: Short Hair is RM 330, Medium Hair is RM360, Long Hair is RM 380. </p></string>
    <string name="menu_snpl11_infor">\t\t\t\t\t<t>Price of Hair Cut: RM45 – RM80</t>\n\t\t\t\t\t<t>Price of Color: RM130 – RM250</t>\n\t\t\t\t\t<t>Price of Hair Perm: RM150 – RM370</t>\n\n<p>Hair Cut + Color + Hair Perm is a Package 6. The price of this package 6 will be cheaper than monomer. So Customer can enjoy three services at the discounted price. </p>\n\n<p>Hair Cut for Senior Stylist is RM 45 for boys and RM 60 for girls. Professional is RM 50 for boys and RM 70 for girls. Director is RM60 for boys and RM 80 for girls. \n\n Color for Boys is RM 130, for girls is depends on the hair length: Short Hair is RM190, Medium Hair is RM 220 and Long Hair is RM 250. \n\n Cold Perm for boys is RM 150, for girls is Digital Perm and the price is depends on the hair length: Short Hair is RM 320, Medium Hair is RM350, Long Hair is RM 370.</p></string>
    <string name="menu_snpl12_infor">\t\t\t\t\t<t>Price of Color: RM140 – RM260</t>\n\t\t\t\t\t<t>Price of Hair Perm: RM165 – RM380</t>\n\t\t\t\t\t<t>Price of Nail Treatment: RM60</t>\n\n<p>Color + Hair Perm + Nail Treatment is a Package 7. The price of this package 7 will be cheaper than the monomer. So Customer can enjoy two services at the discounted price. </p>\n\n<p>Color for Boys is RM 140, for girls is depends on the hair length: Short Hair is RM200, Medium Hair is RM 230 and Long Hair is RM 260. \n\n Cold Perm for boys is RM 165, for girls is Digital Perm and the price is depends on the hair length: Short Hair is RM 330, Medium Hair is RM360, Long Hair is RM 380. Nail Treatment can strenghten your natural nails so that they can grow long and healthy, and to insure nail plate is tough to withstand any nail enhancements. </p></string>
    <string name="menu_snpl13_infor">\t\t\t\t\t<t>Price of Color: RM140 – RM260</t>\n\t\t\t\t\t<t>Price of Hair Perm: RM165 – RM380</t>\n\t\t\t\t\t<t>Price of Nail Treatment: RM60</t>\n<t>Price of Shampoo Service: RM25 – RM55</t>\n\n<p>Color + Hair Perm + Nail Treatment + Shampoo Service is a Package 8. The price of this package 8 will be cheaper than the monomer. So Customer can enjoy two services at the discounted price. </p>\n\n<p>Color for Boys is RM 140, for girls is depends on the hair length: Short Hair is RM200, Medium Hair is RM 230 and Long Hair is RM 260. Cold Perm for boys is RM 165, for girls is Digital Perm and the price is depends on the hair length: Short Hair is RM 330, Medium Hair is RM360, Long Hair is RM 380. </p>\n\n<p>Nail Treatment can strenghten your natural nails so that they can grow long and healthy, and to insure nail plate is tough to withstand any nail enhancements. Shampoo Service for Boys is RM25. For girls, RM35 for short hair and RM55 for long hair. </p></string>
    <string name="menu_snpl14_infor">\t\t\t\t\t<t>Price of Hair Cut: RM45 – RM80</t>\n\t\t\t\t\t<t>Price of Color: RM130 – RM250</t>\n\t\t\t\t<t>Price of Hair Perm: RM150 – RM370</t>\n<t>Price of Shampoo Service: RM25 – RM55</t>\n\n<p>Hair Cut + Color + Hair Perm + Shampoo Service is a Package 9. The price of this package 9 will be cheaper than monomer. So Customer can enjoy three services at the discounted price. </p>\n\n<p>Hair Cut for Senior Stylist is RM 45 for boys and RM 60 for girls. Professional is RM 50 for boys and RM 70 for girls. Director is RM60 for boys and RM 80 for girls. Color for Boys is RM 130, for girls is depends on the hair length: Short Hair is RM190, Medium Hair is RM 220 and Long Hair is RM 250. </p>\n \n<p>Cold Perm for boys is RM 150, for girls is Digital Perm and the price is depends on the hair length: Short Hair is RM 320, Medium Hair is RM350, Long Hair is RM 370. Shampoo Service for Boys is RM25. For girls, RM35 for short hair and RM55 for long hair. </p></string>

    <string name="menu_snpl14_sn">Package 9</string>
    <string name="menu_snpl13_sn">Package 8</string>
    <string name="menu_snpl12_sn">Package 7</string>
    <string name="menu_snpl10_sn">Package 5</string>
    <string name="menu_snpl11_sn">Package 6</string>
    <string name="menu_snpl9_sn">"Package 4 "</string>
    <string name="menu_snpl8_sn">Package 3</string>
    <string name="menu_snpl7_sn">Package 2</string>
    <string name="menu_snpl6_sn">Package 1</string>


</resources>