<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".snpl8"
    android:background="@drawable/htl_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <TableLayout
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:stretchColumns="1">

            <TextView
                android:id="@+id/menu_snpl8"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:gravity="center"
                android:text="@string/menu_snpl8_sn"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-smallcaps"
                android:background="@drawable/round_button"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager8"
                android:layout_width="match_parent"
                android:layout_height="250dp"></androidx.viewpager.widget.ViewPager>

            <TextView
                android:id="@+id/menu_snpl8_infor"
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_button"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center_vertical"
                android:text="@string/menu_snpl8_infor"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
            <RelativeLayout>
                <Button
                    android:id="@+id/btn_booking8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rounb_button2"
                    android:text="@string/booking"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp" /></RelativeLayout>

            <EditText
                android:id="@+id/enter_c8"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:autofillHints=" "
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_comments"
                android:inputType="textMultiLine"
                android:background="@drawable/round_button"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="20sp" />
            <RelativeLayout>
                <Button
                    android:id="@+id/btn_c8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rounb_button2"
                    android:text="@string/send_comment"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp" /></RelativeLayout>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>